@@ -1,7 +1,13 @@
+2004-11-04  Kei Sakamoto  <sakamoto.kei@denesas.com>
+	* m32r-tdep.c (m32r_memory_insert_breakpoint): Remove
+	unnecessary parallel execution bit.
+	(m32r_memory_remove_breakpoint): Ditto.
+	(m32r_breakpoint_from_pc): Update.
+
 2004-11-03  Randolph Chung  <tausq@debian.org>
 
 	* hppa-tdep.c (hppa_frame_cache): Use frame_pc_unwind instead of
-    frame_func_unwind to locate the unwind entry.
+	frame_func_unwind to locate the unwind entry.
 	(hppa_frame_this_id): Likewise.
 
 2004-11-03  Andrew Cagney  <cagney@gnu.org>
